added header background

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
 }
 .header {
-  background-image: url("../Assets/Hero-bg.png");
+  background-image: url("../Assests/Hero-bg.png");
   max-width: 1440;
   height: 698px;
 }
